--- a/templates/About_App/hifz.html
+++ b/templates/About_App/hifz.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="{% static 'css/activity.css' %}">
     <link rel="stylesheet" href="{% static 'css/campus.css' %}">
     <link rel="stylesheet" href="{% static 'css/mission.css' %}">
+    <link rel="stylesheet" href="{% static 'css/teachers.css' %}">
 {% endblock css %}
 
 {% block body_block%}
-    <section class="about-section py-5">
-      <div class="contain text-center">
-          <h1 class="py-4">OUR HIFZUL QURAN</h1>
-      </div>
+
+    <section class="contain" id="contain_top_banner">
+        <img class="img_banner" src="{% static 'img/Hifzul-Quran.jpg' %}" alt="">
+        <div class="overlay"> 
+            <h2 class="text-light display-3">OUR HIFZUL QURAN</h2>
+        </div>
     </section>
 
     <section class="mt-sm-5 py-5" id="full_day_schl">
