--- a/templates/Academic_App/career.html
+++ b/templates/Academic_App/career.html
@@ -5,12 +5,12 @@
 {% block title_block %} {{ title }} {% endblock %}
 
 {% block css %}
-    
+    <link rel="stylesheet" href="{% static 'css/about.css' %}">
 {% endblock css %}
 
 
 {% block body_block %}
-<section class="about-section py-5 bg-dark">
+<section class="about-section py-5">
     <div class="contain text-center">
         <h1 class="py-4 text-light">BE A PART OF US</h1>
     </div>
