--- a/templates/Academic_App/exam_schedule.html
+++ b/templates/Academic_App/exam_schedule.html
@@ -7,14 +7,17 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/about.css' %}">
     <link rel="stylesheet" href="{% static 'css/activity.css' %}">
-    <link rel="stylesheet" href="{% static 'css/proces.css' %}">
+    <link rel="stylesheet" href="{% static 'css/process.css' %}">
+    <link rel="stylesheet" href="{% static 'css/teachers.css' %}">
 {% endblock css %}
 
 
 {% block body_block %}
-    <section class="about-section py-5">
-        <div class="contain text-center">
-            <h1 class="py-4">SCHEDULE OF EXAMINATION</h1>
+
+    <section class="contain" id="contain_top_banner">
+        <img class="img_banner" src="{% static 'img/IMG_5015.jpg' %}" alt="">
+        <div class="overlay"> 
+            <h2 class="text-light display-3">SCHEDULE OF EXAMINATION</h2>
         </div>
     </section>
 
