--- a/templates/Academic_App/syllabus.html
+++ b/templates/Academic_App/syllabus.html
@@ -7,7 +7,7 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/about.css' %}">
     <link rel="stylesheet" href="{% static 'css/activity.css' %}">
-    <link rel="stylesheet" href="{% static 'css/proces.css' %}">
+    <link rel="stylesheet" href="{% static 'css/process.css' %}">
 {% endblock css %}
 
 
