--- a/templates/Admission_App/process.html
+++ b/templates/Admission_App/process.html
@@ -6,256 +6,100 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/about.css' %}">
-    <link rel="stylesheet" href="{% static 'css/proces.css' %}">
+    <link rel="stylesheet" href="{% static 'css/process.css' %}">
+    <link rel="stylesheet" href="{% static 'css/teachers.css' %}">
 {% endblock css %}
 
 {% block body_block %}  
-  <section class="about-section py-5">
-    <div class="contain text-center">
-        <h1 class="py-4">ADMISSION INTAKE <br><br> JANUARY TO DECEMBER</h1>
-    </div>
-  </section>
 
-  <section>
-    <div class="container">
-        <div class="row pt-md-5">
-            <div class="col-md-6">
-                <h1 class="text-center">Classes</h1>
-                <div class="row">
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Nursery</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">04 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Lower KG</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">05 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1  text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Upper KG</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">06 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1  text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 1</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">07 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 2</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">08 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 3</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">09 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 4</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">10 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 5</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">11 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 6</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">12 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 7</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">13 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 8</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">14 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 9</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">15 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 10</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">16 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 11</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">17 Years old</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-1 text-center" id="admission_card">
-                        <div>
-                            <h3 class="pt-2">Grade - 12</h3>
-                        </div>
-                        <div class="line"></div>
-                        <div>
-                            <p class="pt-3">18 Years old</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 text-center">
-                <h1 class="text-center">Admission Process</h1>
-                <div class="py-1" id="admission_card">
-                    <h4>Form</h4>
-                    <h5>Purchase</h5>
-                </div>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="py-1" id="admission_card">
-                    <h4>Assesment</h4>
-                    <h5>& Interview</h5>
-                </div>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="py-1" id="admission_card">
-                    <h4>Confirmation</h4>
-                    <h5></h5>
-                </div>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="py-1" id="admission_card">
-                    <h4>Enrollment</h4>
-                    <h5></h5>
-                </div>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="py-1" id="admission_card">
-                    <h4>Form & Document</h4>
-                    <h5>Submission</h5>
-                </div>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="py-1" id="admission_card">
-                    <h4>Assessment Result & Form</h4>
-                    <h5>Analysis</h5>
-                </div>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="py-1" id="admission_card">
-                    <h4>Admission Fee</h4>
-                    <h5>Payment</h5>
-                </div>
-            </div>
-            
+  <section class="contain" id="contain_top_banner">
+        <img class="img-fluid" src="{% static 'img/admission/Age-01.jpg' %}" alt="">
+        <div class="overlay"> 
+            <h2 class="text-light display-3">ADMISSION INTAKE <br> JANUARY TO DECEMBER</h2>
         </div>
-    </div>
   </section>
 
-  <section>
+    <section class="container" id="age_container">
+        <div class="row">
+            <div class="col-md-3" id="age_requirments_container">
+                <img id="age_requirments_01" src="{% static 'img/admission/Age-1.png' %}" alt="">
+            </div>
+            <div class="col-md-9" id="age_requirments_container">
+                <img id="age_requirments_01" src="{% static 'img/admission/Age-2.png' %}" alt="">
+            </div>
+        </div>
+    </section>
+
+  <!-- <section>
     <div class="container">
-        <div class="row pt-5">
+        <div class="row pt-md-2">
             <div class="col-md-4">
                 <div class="columns">
                     <ul class="price">
-                      <li class="header">Admission<br>Application</li>
+                      <li class="header">Admission Application</li>
                       <li>Admission are open from Play Group to Class 9 Only</li>
                       <li>Admission are closed for Class 10</li>
                       <li>Admission are accepted while there is available class capacity</li>
                       <li>Applications must purchase the Admissions From online or at the Admission office</li>
                       <li>Applicants assessment are campulsory for play gropu to class 9</li>
-                      <li class="grey"><a href="#" class="button">Apply</a></li>
+                      <li class="grey"><a href="{% url 'admission_app:admission' %}" class="button">Apply Now</a></li>
                     </ul>
                   </div>
             </div>
             <div class="col-md-4">
                 <div class="columns">
                     <ul class="price">
-                      <li class="header">Admission<br>Assessment</li>
+                      <li class="header">Admission Assessment</li>
                       <li>All Applicants must attent admission assesment-orally and / or written</li>
                       <li>Nursery Applicants are assessed orally</li>
                       <li>Grade 9 applicants are assessed through written test</li>
                       <li>Applicants must score over 60% on the assessment to be eligble for admission</li>
-                      <li class="grey"><a href="#" class="button">Apply</a></li>
+                      <li class="grey"><a href="{% url 'admission_app:admission' %}" class="button">Apply Now</a></li>
                     </ul>
                   </div>
             </div>
-            <div class="col-md-4">
+             <div class="col-md-4">
                 <div class="columns">
                     <ul class="price">
-                      <li class="header">Admission<br>Documents</li>
+                      <li class="header">Admission Documents</li>
                       <li>Applicants ID-Brith Certificate or Passport</li>
                       <li>Father & Mother's ID-National or Passport</li>
                       <li>Applicants photo-passport size. Father & Mother's photo-passport size</li>
                       <li>Withdrawal Certificate. Medical Document</li>
                       <li>Income statement of parents/guardians</li>
-                      <li class="grey"><a href="#" class="button">Apply</a></li>
+                      <li class="grey"><a href="{% url 'admission_app:admission' %}" class="button">Apply Now</a></li>
                     </ul>
                   </div>
             </div>
         </div>
     </div>
-  </section>
+  </section> -->
 
+    <section id="application_process_container">
+      <div class="container">
+        <div class="row py-md-5">
+        <div class="col-md-4">
+          <div class="row" id="admission_process">
+            <img class="admission_process_img" src="{% static 'img/admission/Web-page-3.png' %}" alt="">
+          </div>
+          <div class="row">
+            <img class="admission_process_img" src="{% static 'img/admission/Web-page-4_1.png' %}" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="row" id="admission_process">
+            <img class="admission_process_img" src="{% static 'img/admission/Web-page-1.png' %}" alt="">
+          </div>
+          <div class="row">
+            <img class="admission_process_img mt-5 pt-md-5" src="{% static 'img/admission/Web-page-5.png' %}" alt="">
+          </div>
+          <div class="row">
+            <a class="btn btn-primary my-5" href="{% url 'admission_app:admission' %}">Apply Now</a>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
 {% endblock %}
