--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,26 +10,26 @@
         <div class="col-md-2 mt-3">
             <div >
             <h5 class="about_ethereal">About Ethereal</h5>
-            <a href="#">Mission</a>
-            <a href="#">Vision & Philosophya</a>
-            <a href="#">Ethereal Values</a>
+            <a href="{% url 'about_app:about' %}">Mission</a>
+            <a href="{% url 'about_app:about' %}">Vision & Philosophya</a>
+            <a href="{% url 'about_app:about' %}">Ethereal Values</a>
             </div>
             <div class="mt-3">
             <h5 class="about_ethereal">Academics</h5>
-            <a href="#">Curriculum Overview</a>
+            <a href="{% url 'academic_app:curriculum' %}">Curriculum Overview</a>
             </div>
         </div>
         <div class="col-md-2 mt-3" id="upper-footer-col-3">
-            <a href="#">Sports</a>
-            <a href="#">Performing Arts</a>
-            <a href="#">Special Program</a>
-            <a href="#">Admission</a>
-            <a href="#">Career</a>
+            <a href="{% url 'about_app:extracurr' %}">Sports</a>
+            <a href="{% url 'about_app:extracurr' %}">Performing Arts</a>
+            <a href="{% url 'about_app:extracurr' %}">Special Program</a>
+            <a href="{% url 'admission_app:process' %}">Admission</a>
+            <a href="{% url 'academic_app:career' %}">Career</a>
             <a href="#"> News and Facts</a>
-            <a href="#">School Policies</a>
+            <a href="{% url 'about_app:about' %}">School Policies</a>
         </div>
         <div class="col-md-3 mt-3">
-            <a id="admission_btn" href="#">Admission going on</a>
+            <a id="admission_btn" href="{% url 'admission_app:admission' %}">Admission going on</a>
             <h5 class="footer_head mt-3">Ethereal An English Medium School</h5>
             <div class="row" id="address">
             <div class="col-1"><i class="fa-solid fa-location-dot"></i></div>
@@ -48,11 +48,11 @@
             <h5 class="footer_head mt-3">Follow Us</h5>
             <p id="follow_text">You can easily find us on modern social medias also.</p>
             <div class="footer_icons">
-            <a href="https://www.facebook.com/etherealschoolbd/"><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/etherealschoolbd/"><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
         </div>
@@ -62,7 +62,7 @@
         <div class="container">
         <div class="row pt-3">
             <div class="col-md-6"><p>Copyright © Ethereal An English Medium School</p></div>
-            <div class="col-md-6"><p class="" id="dev_text">Developed by <a class="" href="https://mdshanewaz.github.io/DarkBlackFire" target=”_blank”>QuantuMind</a></p></div>
+            <div class="col-md-6"><p class="" id="dev_text">Developed by <a class="" href="https://mdshanewaz.github.io/DarkBlackFire" target=”_blank”>QuantuMindLab</a></p></div>
         </div>
         </div>
     </div>
