--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,6 +24,36 @@ nav{
     font-size: 15px;
 }
 
+#poster_contain {
+    background-color: #2e2e2eb2;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    height: 100vh;
+    display: none;
+}
+
+#poster {
+    display: grid;
+}
+
+#poster button {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 65%;
+    border: 2px solid #8a8a8a;
+    font-size: 22px;
+}
+
+#poster img {
+    width: 25%;
+    margin: 0 auto;
+    padding: 10px 0;
+    z-index: 10000;
+}
+
 .message_title{
     font-family: Dancing Script, cursive;
 }
@@ -31,7 +61,7 @@ nav{
 
 #carousel_img {
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     /* object-fit: cover; */
 }
 
@@ -164,8 +194,17 @@ nav{
     font-weight: bold;
 }
 
+#message-img-box {
+    position: relative;
+    height: auto;
+}
+
 #President-img{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%); 
     border-radius: 5px;
+    width: 90%;
 }
 
 #admission_btn:hover{
@@ -243,6 +282,15 @@ nav{
 }
 
 @media(max-width:520px){
+
+    #poster img {
+        width: 90%;
+    }
+
+    #poster button {
+        margin-left: 50%;
+    }
+
     .bottom_footer, .upper-footer{
         text-align: center;
     }
@@ -252,5 +300,17 @@ nav{
 
     .admisson_head{
         margin-top: 30px;
+    }
+
+    #carousel_img {
+        height: auto;
+    }
+
+    #President-img {
+        position: relative;
+    }
+
+    .footer_icons {
+        margin-bottom: 20px;
     }
 }
