--- a/static/css/teachers.css
+++ b/static/css/teachers.css
@@ -2,24 +2,28 @@
     --color-1 : rgb(28, 55, 104); 
 }
 
-.img_banner{
+#contain_top_banner{
     position: relative;
-    height: 80vh;
     width: 100%;
-    background: rgba(0, 0, 0, 0.9);
+    height: 80vh;
+    overflow: hidden;
+}   
+
+.img_banner{
+    height: auto;
+    width: 100%;
     object-fit: cover;
+    display: block;
 }
 
 .overlay{
     position: absolute;
-    width: 100%;
-    height: 96vh;
+    inset: 0;
     background: rgba(0, 0, 0, 0.5); /* Black see-through */
     opacity: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0;
 }
 
 .overlay h2{
@@ -75,3 +79,14 @@
 .modal-footer a {
     color: var(--color-1);
 }
+
+@media(max-width:520px){
+    #contain_top_banner {
+        height: auto;
+    }
+
+    .overlay h2{ 
+        font-size: 20px;
+    }
+ }
+
